# represent

./: .gitignore  Cargo.toml  rustfmt.toml
derive/: Cargo.toml
derive/src/: lib.rs
derive/tests/: two_bytes.rs
extra/: Cargo.toml
extra/src/: lib.rs  macros.rs  traits.rs  typedefs.rs
extra/src/generics/: blob.rs  collections.rs  condition.rs  length.rs  mod.rs  slots.rs  utility.rs
src/: key.rs  lib.rs
