[package]
name = "represent_extra"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
represent = { path = ".." }
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }
derivative = "2"
serde = { version = "1", optional = true }
